# xfetcher

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/xfetcher/: __init__.py  downloader.py  utils.py
